daemon/protocol/mcbp/collections_get_collection_id_executor.cc
@@ -24,8 +24,16 @@ void collections_get_collection_id_executor(Cookie& cookie) {
     auto& connection = cookie.getConnection();
     auto& req = cookie.getRequest();
     auto key = req.getKey();
-    std::string_view path{reinterpret_cast<const char*>(key.data()),
-                          key.size()};
+    std::string_view path{};
+
+    if (key.size()) {
+        path = std::string_view{reinterpret_cast<const char*>(key.data()),
+                                key.size()};
+    } else {
+        auto value = req.getValue();
+        path = std::string_view{reinterpret_cast<const char*>(value.data()),
+                                value.size()};
+    }
     auto rv = connection.getBucketEngine().get_collection_id(&cookie, path);
     if (rv.result == cb::engine_errc::success) {
         auto payload = rv.getPayload();
